apps/frontend/src/pages/points-of-interest-details/styles.module.css
.map-container {
	display: grid;
	overflow: hidden;
	border-radius: 8px;
}

.image {
	display: block;
	width: 100%;
	height: 100%;
	object-fit: cover;
	border-radius: 8px;
}

.container {
	display: flex;
	flex-direction: column;
	gap: 32px;
	width: 100%;
	max-width: 1200px;
	padding: 120px 48px;
	margin: 0 auto;
}

.label {
	margin: 0;
	overflow: hidden;
	text-overflow: ellipsis;
	font-size: var(--font-size-h1);
	font-weight: var(--font-weight-semibold);
	line-height: 1.2;
}

.description {
	margin: 0;
	overflow-wrap: break-word;
}

.header-container {
	display: flex;
	column-gap: 16px;
	align-items: flex-end;
	justify-content: space-between;
}

.loader-container {
	display: flex;
	flex: 1;
	align-items: center;
	justify-content: center;
}

.controls-container {
	display: flex;
	column-gap: 8px;
}

@media (width <=1440px) {
	.container {
		max-width: 1000px;
		padding: 80px 48px;
	}
}

@media (width <=768px) {
	.container {
		max-width: none;
		padding: 40px 32px;
	}
}

@media (width <=480px) {
	.container {
		padding: 24px;
	}

	.label {
		font-size: var(--font-size-h2);
	}
}

